--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /TaskBackend/Solution/.vs/Solution/FileContentIndex/99969afa-84ec-451a-a1ce-cf4b856a5aba.vsidx
 /TaskBackend/Solution/.vs/Solution/FileContentIndex/b783434e-f773-4514-93c3-b0b6f623262a.vsidx
 /TaskBackend/Solution/.vs/Solution/DesignTimeBuild/.dtbcache.v2
+/TaskBackend/Solution/.vs/Solution/FileContentIndex
